background: Re-add drag'n'drop support

Inside the chooser dialogue itself.

https://bugzilla.gnome.org/show_bug.cgi?id=689351